--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -9,14 +9,16 @@ services:
     container_name: immich_postgres
     image: tensorchord/pgvecto-rs:pg14-v0.2.0
     environment:
-      POSTGRES_PASSWORD: ${IMMICH_DB_PASSWORD}
-      POSTGRES_USER: ${IMMICH_DB_USERNAME}
-      POSTGRES_DB: ${IMMICH_DB_DATABASE_NAME}
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      POSTGRES_USER: immich
+      POSTGRES_DB: immich
       POSTGRES_INITDB_ARGS: "--data-checksums"
+    secrets:
+      - db_password
     volumes:
-      - ${IMMICH_DB_DATA_PATH}:/var/lib/postgresql/data
+      - immich_postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: pg_isready --dbname='${IMMICH_DB_DATABASE_NAME}' --username='${IMMICH_DB_USERNAME}' || exit 1; Chksum="$$(psql --dbname='${IMMICH_DB_DATABASE_NAME}' --username='${IMMICH_DB_USERNAME}' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
+      test: pg_isready --dbname='immich' --username='immich' || exit 1; Chksum="$$(psql --dbname='immich' --username='immich' --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')"; echo "checksum failure count is $$Chksum"; [ "$$Chksum" = '0' ] || exit 1
       interval: 5m
       start_interval: 30s
       start_period: 5m
@@ -49,7 +51,7 @@ services:
     container_name: immich_redis
     image: redis:6.2-alpine
     volumes:
-      - redis_data:/data
+      - immich_redis_data:/data
     healthcheck:
       test: redis-cli ping || exit 1
     restart: unless-stopped
@@ -61,22 +63,27 @@ services:
   #--------------------------------------------------------------------------
   immich-server:
     container_name: immich_server
-    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
+    image: ghcr.io/immich-app/immich-server:release
+    ports:
+      - "3001:3001"
     volumes:
-      - ${IMMICH_UPLOAD_LOCATION}:/usr/src/app/upload
+      - /opt/immich/photos:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
-      - server_data:/data
+      - immich_server_data:/data
     environment:
       - DB_HOSTNAME=immich-postgres
-      - DB_USERNAME=${IMMICH_DB_USERNAME}
-      - DB_PASSWORD=${IMMICH_DB_PASSWORD}
-      - DB_DATABASE_NAME=${IMMICH_DB_DATABASE_NAME}
+      - DB_USERNAME=immich
+      - DB_PASSWORD_FILE=/run/secrets/db_password
+      - DB_DATABASE_NAME=immich
       - REDIS_HOSTNAME=immich-redis
-      - LOG_LEVEL=${IMMICH_LOG_LEVEL:-log}
-      - JWT_SECRET=${IMMICH_JWT_SECRET}
-      - TZ=${TZ:-Europe/Berlin}
+      - LOG_LEVEL=log
+      - JWT_SECRET_FILE=/run/secrets/jwt_secret
+      - TZ=Europe/Berlin
       - IMMICH_PORT=3001
       - IMMICH_HOST=0.0.0.0
+    secrets:
+      - db_password
+      - jwt_secret
     depends_on:
       - immich-redis
       - immich-postgres
@@ -110,12 +117,12 @@ services:
     #         - driver: nvidia
     #           count: 1
     #           capabilities: [gpu]
-    image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}
+    image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
-      - ${IMMICH_MODEL_CACHE_PATH}:/cache
+      - /opt/immich/model-cache:/cache
     environment:
-      - LOG_LEVEL=${IMMICH_LOG_LEVEL:-log}
-      - TZ=${TZ:-Europe/Berlin}
+      - LOG_LEVEL=log
+      - TZ=Europe/Berlin
     restart: unless-stopped
     networks:
       - immich_network
@@ -134,8 +141,21 @@ services:
 # Volumes - for persistent data
 #--------------------------------------------------------------------------
 volumes:
-  redis_data:
-  server_data:
+  immich_postgres_data:
+    name: immich_postgres_data
+  immich_redis_data:
+    name: immich_redis_data
+  immich_server_data:
+    name: immich_server_data
+
+#--------------------------------------------------------------------------
+# Secrets - for sensitive data
+#--------------------------------------------------------------------------
+secrets:
+  db_password:
+    file: /opt/secrets/immich/db_password
+  jwt_secret:
+    file: /opt/secrets/immich/jwt_secret
 
 #--------------------------------------------------------------------------
 # Networks - for service isolation
