--- a/stacks/drive/compose.yaml
+++ b/stacks/drive/compose.yaml
@@ -15,6 +15,9 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER_FILE=/run/secrets/db_user
       - MYSQL_PASSWORD_FILE=/run/secrets/db_password
+      - NEXTCLOUD_ADMIN_USER=admin # ← Admin-User
+      - NEXTCLOUD_ADMIN_PASSWORD=password # ← Admin-Password (aus Secret!)
+      - NEXTCLOUD_TRUSTED_DOMAINS=localhost
     secrets:
       - db_user
       - db_password
