--- a/stacks/drive/compose.yaml
+++ b/stacks/drive/compose.yaml
@@ -15,9 +15,13 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER_FILE=/run/secrets/db_user
       - MYSQL_PASSWORD_FILE=/run/secrets/db_password
+      - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/nextcloud_admin_user
+      - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/nextcloud_admin_password
     secrets:
       - db_user
       - db_password
+      - nextcloud_admin_user
+      - nextcloud_admin_password
     volumes:
       - /opt/drive/html:/var/www/html
       - /opt/drive/data:/var/www/html/data
@@ -85,6 +89,10 @@ secrets:
     file: /opt/secrets/drive/db_user
   db_password:
     file: /opt/secrets/drive/db_password
+  nextcloud_admin_user:
+    file: /opt/secrets/drive/nextcloud_admin_user
+  nextcloud_admin_password:
+    file: /opt/secrets/drive/nextcloud_admin_password
 
 #--------------------------------------------------------------------------
 # Networks - for service isolation
