--- a/stacks/drive/compose.yaml
+++ b/stacks/drive/compose.yaml
@@ -17,6 +17,12 @@ services:
       - MYSQL_PASSWORD_FILE=/run/secrets/db_password
       - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/nextcloud_admin_user
       - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/nextcloud_admin_password
+      # Reverse proxy (Caddy on edge) + public domain
+      - NEXTCLOUD_TRUSTED_DOMAINS=drive.atlantis-cloud.com
+      - TRUSTED_PROXIES=192.168.2.120
+      - OVERWRITEHOST=drive.atlantis-cloud.com
+      - OVERWRITEPROTOCOL=https
+      - OVERWRITECLIURL=https://drive.atlantis-cloud.com
     secrets:
       - db_user
       - db_password
