--- a/stacks/drive/compose.yaml
+++ b/stacks/drive/compose.yaml
@@ -18,7 +18,7 @@ services:
       - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/nextcloud_admin_user
       - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/nextcloud_admin_password
       # Reverse proxy (Caddy on edge) + public domain
-      - NEXTCLOUD_TRUSTED_DOMAINS=drive.atlantis-cloud.com
+      - "NEXTCLOUD_TRUSTED_DOMAINS=drive.atlantis-cloud.com 192.168.2.145"
       - TRUSTED_PROXIES=192.168.2.120,192.168.2.145
       # - OVERWRITEHOST=drive.atlantis-cloud.com
       # - OVERWRITEPROTOCOL=https
