--- a/stacks/dockge/compose.yaml
+++ b/stacks/dockge/compose.yaml
@@ -1,6 +1,7 @@
 services:
   dockge:
     image: louislam/dockge:1
+    pull_policy: always
     restart: unless-stopped
     ports:
       - 5001:5001
