--- a/stacks/notes/compose.yaml
+++ b/stacks/notes/compose.yaml
@@ -6,6 +6,7 @@ services:
   #--------------------------------------------------------------------------
   affine:
     image: ghcr.io/toeverything/affine:${AFFINE_REVISION:-stable}
+    pull_policy: always
     container_name: affine
     ports:
       - "3010:3010"
@@ -48,7 +49,8 @@ services:
   # Redis Cache Service
   #--------------------------------------------------------------------------
   redis:
-    image: redis
+    image: redis:7-alpine
+    pull_policy: always
     container_name: affine_redis
     volumes:
       - notes_redis_data:/data
@@ -66,6 +68,7 @@ services:
   #--------------------------------------------------------------------------
   postgres:
     image: pgvector/pgvector:pg16
+    pull_policy: always
     container_name: affine_postgres
     volumes:
       - notes_postgres_data:/var/lib/postgresql/data
