Update README and SECRETS documentation for Docker Compose secrets usage; modify Affine service image reference in compose.yaml

--- a/stacks/notes/compose.yaml
+++ b/stacks/notes/compose.yaml
@@ -5,7 +5,7 @@ services:
   # Affine Main Service
   #--------------------------------------------------------------------------
   affine:
-    image: ghcr.io/toeverything/affine:${AFFINE_REVISION:-stable}
+    image: ghcr.io/toeverything/affine:stable
     pull_policy: always
     container_name: affine
     ports:
