--- a/stacks/dockge/compose.yaml
+++ b/stacks/dockge/compose.yaml
@@ -7,8 +7,8 @@ services:
       - 5001:5001
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /opt/dockge/data:/app/data
-      - /opt/secrets:/opt/secrets:ro
+      - /srv/containers/dockge/data:/app/data
+      - /srv/secrets:/opt/secrets:ro
       # Stacks Directory
       # ⚠️ READ IT CAREFULLY. If you did it wrong, your data could end up writing into a WRONG PATH.
       # ⚠️ 1. FULL path only. No relative path (MUST)
