--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - "2283:2283"
     volumes:
-      - /opt/immich/photos:/data
+      - /srv/containers/immich/photos:/data
       - /etc/localtime:/etc/localtime:ro
     environment:
       DB_HOSTNAME: database
@@ -38,7 +38,7 @@ services:
     image: ghcr.io/immich-app/immich-machine-learning:release
     pull_policy: always
     volumes:
-      - /opt/immich/model-cache:/cache
+      - /srv/containers/immich/model-cache:/cache
     environment:
       IMMICH_LOG_LEVEL: log
       TZ: Europe/Berlin
@@ -92,4 +92,4 @@ volumes:
 #--------------------------------------------------------------------------
 secrets:
   db_password:
-    file: /opt/secrets/immich/db_password
+    file: /srv/secrets/immich/db_password
