--- a/stacks/obsidian/compose.yaml
+++ b/stacks/obsidian/compose.yaml
@@ -15,7 +15,7 @@ services:
       - couchdb_password
     volumes:
       - obsidian_data:/opt/couchdb/data
-      - /opt/obsidian/config:/opt/couchdb/etc/local.d
+      - /srv/containers/obsidian/config:/opt/couchdb/etc/local.d
     # Remove port exposure since we'll access via cloudflared
     # ports:
     #   - "5984:5984"
@@ -36,6 +36,6 @@ volumes:
 # Secrets for CouchDB
 secrets:
   couchdb_user:
-    file: /opt/secrets/obsidian/couchdb_user
+    file: /srv/secrets/obsidian/couchdb_user
   couchdb_password:
-    file: /opt/secrets/obsidian/couchdb_password
+    file: /srv/secrets/obsidian/couchdb_password
